# clock-in-pro

./: .dockerignore  .env  .gitignore  .replit  DEPLOYMENT_GUIDE.md  FACE_RECOGNITION_README.md  LOCAL_SETUP_GUIDE.md  PUSH_INSTRUCTIONS.md  REACT_FIX_APPLIED.md  README.md  SETUP_COMPLETE.md  SETUP_GUIDE.md  build_apk.py  create_webview_apk.py  debug_face_security.py  demo_face_system.py  drizzle.config.ts  esbuild.config.js  face_analysis_system.py  fix_face_security.py  friends_face_analysis.py  generate_icons.py  image_preprocessor.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  python-requirements.txt  replit.md  requirements.txt  setup_face_system.py  test_face_system.py  test_face_upload.py  test_face_verification.py  test_security_verification.py  vite.config.ts
attached_assets/: AttendanceProject_1750959682898.py  Pasted--Running-python-u-d-Projects-Personal-Working-on-It-AttendenceSystem-FaceAttendanceMurtuza-Atten-1750959667808_1750959667809.txt  Pasted-Login-request-received-email-mohammad-taiyab-khan-password-123456-Parsed-credentials--1750955472101_1750955472102.txt
client/: index.html
scripts/: debug-python.js  migrate-security-enhancements.js  migrate-security-enhancements.sql  populate-face-embeddings.js  simple-db-test.js  simple-populate-embeddings.js  test-db-connection.js  test-face-recognition.js  testDistances.js  test_deepface_import.py  test_face_recognition.js
server/: actual_deepface.py  auth.ts  db.ts  deepface_recognition.py  face_recognition_service.py  index.ts  insightface_embed.py  liveness_detection.py  routes.ts  (+7 more)
(+80 files in other folders)
